[tool.poetry]
name = "tmp"
version = "0.1.0"
description = ""
authors = ["lambda-chat <chat.algebrique@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
